<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.n2oapp.framework.security</groupId>
    <artifactId>security-admin</artifactId>
    <packaging>pom</packaging>
    <version>9.1.0-SNAPSHOT</version>

    <parent>
        <groupId>net.n2oapp.platform</groupId>
        <artifactId>n2o-boot-platform-parent</artifactId>
        <version>7.1.2</version>
        <relativePath />
    </parent>

    <properties>
        <java.version>21</java.version>
        <n2o.version>7.29.21</n2o.version>
        <rdm-sync.version>1.54.1</rdm-sync.version>
        <feign.version>13.6</feign.version>
        <cxf.version>4.1.3</cxf.version>
        <rdm-api.version>4.24.1</rdm-api.version>
        <liquibase-sessionlock.version>1.6.9</liquibase-sessionlock.version>
        <config.server.enable>false</config.server.enable>
        <jacoco.skip>true</jacoco.skip>
    </properties>

    <scm>
        <connection>scm:git:https://git.i-novus.ru/framework/security-admin.git</connection>
        <url>https://git.i-novus.ru/framework/security-admin</url>
        <developerConnection>scm:git:https://git.i-novus.ru/framework/security-admin.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>security-admin-api</module>
        <module>security-admin-rest-api</module>
        <module>security-admin-rest-client</module>
        <module>security-auth</module>
        <module>security-auth-common</module>
        <module>security-admin-impl</module>
        <module>security-admin-web</module>
        <module>security-admin-rest-server</module>
        <module>security-admin-sso-keycloak</module>
        <module>security-admin-db</module>
        <module>security-admin-backend</module>
        <module>security-admin-frontend</module>
        <module>coverage</module>
        <module>security-autoconfigure</module>
        <module>security-starters</module>
    </modules>

    <profiles>
        <profile>
            <id>production</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <config.server.enable>true</config.server.enable>
            </properties>
        </profile>

        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <distributionManagement>
                <repository>
                    <id>central</id>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <signer>bc</signer>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>process-docker-config</id>
                        <phase>initialize</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>process-docker-config</id>
                        <phase>clean</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
